--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ ul.social_icon li a:hover {
 
 .about {
      background-color: #fff;
-     padding: 90px 0;
+     padding: 90px 0 30px 0;
 }
 
 .about .titlepage {
