--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ button {
 }
 
 .loader img {
-	width: 280px;
+	width: 100px;
 }
 
 ul.btn {
@@ -347,14 +347,14 @@ ul.btn li:last-child {
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
-	color: #51fe44;
+	color: #045c4c;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-	color: #51fe44;
+	color: #045c4c;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -495,7 +495,7 @@ ul.btn li:last-child {
 	width: 20px;
 	height: 20px;
 	border-radius: 20px;
-	background: #48ca95;
+	background: #045c4c;
 	margin-right: 5px;
 	margin-left: 5px;
 }
@@ -525,7 +525,7 @@ ul.btn li:last-child {
 }
 
 .text-bg a:hover {
-	background-color: #48ca95;
+	background-color: #045c4c;
 	color: #fff;
 	transition: ease-in all 0.5s;
 }
@@ -545,7 +545,7 @@ ul.btn li:last-child {
 	font-weight: bold;
 	padding: 0;
 	text-transform: uppercase;
-	border-bottom: #48ca95 solid 1px;
+	border-bottom: #045c4c solid 1px;
 	max-width: 660px;
 	margin: auto;
 }
@@ -563,7 +563,7 @@ ul.btn li:last-child {
 .read_more {
 	font-size: 17px;
 	border-radius: 100px;
-	background-color: #48ca95;
+	background-color: #045c4c;
 	color: #fff !important;
 	padding: 13px 0px;
 	width: 100%;
@@ -592,7 +592,7 @@ ul.btn li:last-child {
 	background: #fff;
 	text-align: center;
 	padding: 50px 20px 20px 20px;
-	border: #48ca95 solid 1px;
+	border: #045c4c solid 1px;
 	border-radius: 15px;
 }
 
@@ -655,7 +655,8 @@ ul.btn li:last-child {
 }
 
 .our_products .product_box h3:hover {
-	background: #48ca95;
+	color: #ffffff;
+	background: #045c4c;
 	transition: ease-in all 0.5s;
 }
 
@@ -668,14 +669,14 @@ ul.btn li:last-child {
 	display: block;
 	margin-top: 50px;
 	background-color: transparent;
-	border: #48ca95 solid 2px;
-	color: #48ca95 !important;
+	border: #045c4c solid 2px;
+	color: #045c4c !important;
 	max-width: 232px;
 	padding: 15px 0;
 }
 
 .our_products .read_more:hover {
-	background: #0a5370;
+	background: #045c4c;
 	color: #ffffff !important;
 }
 
@@ -787,7 +788,7 @@ ul.btn li:last-child {
 	width: 20px;
 	height: 20px;
 	border-radius: 20px;
-	background: #48ca95;
+	background: #045c4c;
 }
 
 .customer_Carousel .carousel-indicators li.active {
@@ -855,7 +856,7 @@ ul.btn li:last-child {
 .main_form .send_btn {
 	font-size: 22px;
 	transition: ease-in all 0.5s;
-	background-color: #48ca95;
+	background-color: #045c4c;
 	text-transform: uppercase;
 	color: #ffffff;
 	padding: 15px 0px;
@@ -933,7 +934,7 @@ ul.social_icon li a {
 }
 
 ul.social_icon li a:hover {
-	background-color: #48ca95;
+	background-color: #045c4c;
 	color: #fff;
 }
 
@@ -984,7 +985,7 @@ ul.social_icon li a:hover {
 .sub_btn {
 	font-size: 17px;
 	transition: ease-in all 0.5s;
-	background-color: #48ca95;
+	background-color: #045c4c;
 	color: #fff;
 	padding: 10px 0px;
 	max-width: 147px;
@@ -1021,7 +1022,7 @@ ul.social_icon li a:hover {
 }
 
 .copyright a:hover {
-	color: #48ca95;
+	color: #045c4c;
 }
 
 
