--- a/css/tooplate-main.css
+++ b/css/tooplate-main.css
@@ -438,8 +438,8 @@ a {
 	margin-bottom: 30px;
 }
 .single-product .right-content span {
-	font-size: 14px;
-	color: #3a8bcd;
+	font-size: 18px;
+	color: #045c4c;
 	font-weight: 500;
 	display: inline-block;
 	margin-bottom: 15px;
